--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "homepage": "https://github.com/davidysoards/highcharts-mockups",
   "dependencies": {
+    "autoprefixer": "^9.5.1",
     "highcharts": "^7.1.1",
     "highcharts-react-official": "^2.1.3",
     "normalize.css": "^8.0.1",
+    "postcss-modules": "^1.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
