--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "sass": "^1.19.0"
   },
   "scripts": {
-    "clear-build-cache": "rm -rf .cache/ dist/",
+    "cclear": "rm -rf .cache/ dist/",
     "dev": "cross-env NODE_ENV=development parcel src/index.html",
     "build": "cross-env NODE_ENV=production parcel build src/index.html --public-url /",
     "predeploy": "rm -rf dist && cross-env NODE_ENV=production parcel build src/index.html --public-url /highcharts-mockups",
